# instlist

./: Cargo.toml  LICENSE-APAHCE  LICENSE-MIT  Makefile  README.md
.github/workflows/: periodic  periodic.yml
benches/: instlist_bench.rs
src/: lib.rs  main.rs
testcase/: and.v  complex_logic.f  complex_logic.v  low_logic.v  middle_logic.v  not.v  or.v  xor.v
tests/: instlist_test.rs
